--- a/yatube/templates/includes/comments.html
+++ b/yatube/templates/includes/comments.html
@@ -1,5 +1,24 @@
 {% load user_filters %}
-
+{% for comment in comments %}
+  <div class="media mb-4">
+    <div class="media-body">
+      <div class="row">
+       <aside class="col-12 col-md-3">
+      <h5 class="mt-0">
+        <li class="list-group-item">
+          {{ comment.created }} 
+        </li>
+        <a href="{% url 'posts:profile' comment.author.username %}">
+          {{ comment.author.username }}
+        </a>
+      </h5>
+        <p>
+         {{ comment.text }}
+        </p>
+      </div>
+    </div>
+  </aside>
+{% endfor %} 
 {% if user.is_authenticated %}
   <div class="card my-4">
     <h5 class="card-header">Добавить комментарий:</h5>
@@ -14,18 +33,3 @@
     </div>
   </div>
 {% endif %}
-
-{% for comment in comments %}
-  <div class="media mb-4">
-    <div class="media-body">
-      <h5 class="mt-0">
-        <a href="{% url 'posts:profile' comment.author.username %}">
-          {{ comment.author.username }}
-        </a>
-      </h5>
-        <p>
-         {{ comment.text }}
-        </p>
-      </div>
-    </div>
-{% endfor %} 
