--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,51 +1,45 @@
 {% extends 'base.html' %}
 {% load thumbnail %}
 {% block title %}
-  Профайл пользователя {{ author.username }}
+Профайл пользователя {{ author.username }}
 {% endblock %}
 {% block content %}
 <div class="mb-5">
-   {% if following %}
-    <a
-      class="btn btn-lg btn-light"
-      href="{% url 'posts:profile_unfollow' author.username %}" role="button"
-    >
-      Отписаться
-    </a>
-  {% else %}
-      <a
-        class="btn btn-lg btn-primary"
-        href="{% url 'posts:profile_follow' author.username %}" role="button"
-      >
-        Подписаться
+    {% if following %}
+      <a class="btn btn-lg btn-light" href="{% url 'posts:profile_unfollow' author.username %}" role="button">
+          Отписаться
       </a>
-   {% endif %}
+    {% else %}
+      <a class="btn btn-lg btn-primary" href="{% url 'posts:profile_follow' author.username %}" role="button">
+          Подписаться
+      </a>
+    {% endif %}
 </div>
-<div class="container py-5">        
-  <h1>Все посты пользователя {{ author.username }} </h1>
-  <h3>Всего постов:  {{ posts_count }}</h3>
+<div class="container py-5">
+    <h1>Все посты пользователя {{ author.username }} </h1>
+    <h3>Всего постов: {{ posts_count }}</h3>
     {% for post in page_obj %}
       <article>
         <ul>
-          <li>
-            Автор: {{ author.username }}
-          </li>
-          <li>
-            Дата публикации: {{ post.pub_date }}
-          </li>
+            <li>
+                Автор: {{ author.username }}
+            </li>
+            <li>
+                Дата публикации: {{ post.pub_date }}
+            </li>
         </ul>
         {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-         <img class="card-img my-2" src="{{ im.url }}">
+          <img class="card-img my-2" src="{{ im.url }}">
         {% endthumbnail %}
         <p>{{ post.text }}</p>
         <a href="{% url 'posts:post_detail' post.id %}">Подробная информация </a>
-      </article>
-      {% if post.group %}
+    </article>
+    {% if post.group %}
       <a href="{% url 'posts:group_list' post.group.slug %}">Все записи группы</a>
-      {% endif %}
-      {% if not forloop.last %}
-      <hr />
-      {% endif %}
+    {% endif %}
+    {% if not forloop.last %}
+    <hr/>
+    {% endif %}
     {% endfor %}
     {% include 'posts/includes/paginator.html' %}
-{% endblock %}
+    {% endblock %}
