--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -11,7 +11,7 @@
             <a href="{% url 'posts:profile' post.author.username %}">Все посты пользователя</a></li>
         <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
     </ul>
-    {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+    {% thumbnail post.image "960x339" crop="center" upscale=False as im %}
     <img class="card-img my-2" src="{{ im.url }}">
     {% endthumbnail %}
     <p>{{ post.text }}</p>
