--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container py-5">
     <article>
-        {% cache 20 index_page %}
+        {% cache 20 index_page page_obj %}
         {% include 'posts/includes/switcher.html' %}
         {% for post in page_obj %}
         <ul>
@@ -16,7 +16,7 @@
             </li>
             <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
         </ul>
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+        {% thumbnail post.image "960x339" crop="center" upscale=False as im %}
         <img class="card-img my-2" src="{{ im.url }}">
         {% endthumbnail %}
         <p>{{ post.text }}</p>
